finish with skeleton with hardcoded properties